<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openscience.jchempaint</groupId>
    <artifactId>jchempaint</artifactId>
    <version>3.4-SNAPSHOT</version>

    <name>jchempaint</name>
    <description>JChemPaint</description>
    <url>http://jchempaint.github.com</url>

    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <cdk.version>2.11-SNAPSHOT</cdk.version>
    </properties>

    <prerequisites>
        <maven>3.0.0</maven>
    </prerequisites>

    <modules>
        <module>core</module>
        <module>inchi</module>
        <module>inchi-nestedvm</module>
        <module>app-osx</module>
        <module>app-jar</module>
        <module>app-windows</module>
        <module>inchi-jni</module>
        <module>render</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-annotation</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-atomtype</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-core</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-data</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-dict</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-formula</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-render</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-renderbasic</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-renderextra</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-interfaces</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-ioformats</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-io</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-libiocml</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-isomorphism</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-reaction</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-sdg</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-smiles</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-inchi</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-standard</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-valencycheck</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <!-- good to remove extra -->
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-extra</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-legacy</artifactId>
                <version>${cdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openscience.cdk</groupId>
                <artifactId>cdk-test</artifactId>
                <version>${cdk.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>


